# ProfiRAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: DESIGN.md
docs/superpowers/plans/: 2026-04-20-ast-splitter-implementation.md  2026-04-21-retrieve-index-mode.md  2026-04-23-markdown-splitter-implementation.md  2026-04-23-reranker-api.md  2026-04-25-chat-mode-selection.md  2026-04-25-multi-turn-conversation.md  2026-04-29-code-display.md  2026-04-29-fastembed-implementation.md  2026-04-29-search-feature.md
docs/superpowers/specs/: 2026-04-20-ast-splitter-design.md  2026-04-21-retrieve-index-mode-design.md  2026-04-23-markdown-splitter-design.md  2026-04-23-reranker-api-design.md  2026-04-25-chat-mode-selection-design.md  2026-04-25-multi-turn-conversation-design.md  2026-04-29-code-display-design.md  2026-04-29-fastembed-design.md  2026-04-29-search-feature-design.md
scripts/: chunk_documents.py  eval_response_flow.py  eval_retrieval_flow.py  evaluate_chunking.py  evaluate_rag.py  generate_eval_dataset.py  ingest_documents.py  pdf_to_markdown.py  test_plan_agent.py
src/profirag/: __init__.py
src/profirag/agent/: __init__.py  conversation.py  plan_agent.py  react_agent.py  tools.py
src/profirag/config/: __init__.py  settings.py
src/profirag/embedding/: __init__.py  custom_embedding.py  fastembed_embedding.py
src/profirag/evaluation/: __init__.py  chunking.py  dataset.py  response.py  retrieval.py  runner.py
src/profirag/generation/: __init__.py  prompts.py  synthesizer.py
src/profirag/ingestion/: __init__.py  ast_splitter.py  cleaner_config.py  document_cleaner.py  image_processor.py  llm_extractor.py  loaders.py  pipelines.py  quality_checker.py  rule_extractor.py  splitters.py
src/profirag/pipeline/: __init__.py  rag_pipeline.py
src/profirag/retrieval/: __init__.py  hybrid.py  query_transform.py  reranker.py  sparse_vectorizer.py
src/profirag/storage/: __init__.py  base.py  local_store.py  postgres_store.py  qdrant_store.py  registry.py
tests/agent/: __init__.py  test_conversation.py  test_conversation_integration.py
tests/config/: test_chunking_config.py  test_conversation_config.py  test_rerank_config.py  test_retrieve_mode_config.py
tests/embedding/: __init__.py  test_fastembed.py
tests/ingestion/: test_ast_splitter.py  test_markdown_splitter.py
tests/integration/: test_fastembed.py  test_retrieve_modes.py
tests/pipeline/: test_rag_pipeline_ast.py
tests/retrieval/: test_reranker.py  test_retrieve_mode.py
tests/storage/: test_qdrant_bm25_only.py
web/api/: __init__.py  main.py  schemas.py  services.py
web/api/routes/: __init__.py  chat.py  doc_import.py  pdf.py  search.py  split.py
web/frontend/: index.html  package.json  vite.config.js
web/frontend/src/: App.vue  main.js
web/frontend/src/api/: index.js
web/frontend/src/components/: CodeBlock.vue  ModeSelector.vue
web/frontend/src/views/: ChatView.vue  DocImport.vue  DocSplitter.vue  PdfConvert.vue  SearchView.vue
